--- a/java/xml/xsl/employees/employees.html
+++ b/java/xml/xsl/employees/employees.html
@@ -1,33 +1,1 @@
-<html>
-<head>
-<META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-</head>
-<body>
-<table border="1">
-<tr>
-<td>张三</td><td>25</td><td>1200.00</td>
-</tr>
-<tr>
-<td>李四</td><td>28</td><td>1600.00</td>
-</tr>
-<tr>
-<td>王五</td><td>30</td><td>3500.00</td>
-</tr>
-</table>
-<ul>
-<li>张三</li>
-<li>25</li>
-<li>1200.00</li>
-</ul>
-<ul>
-<li>李四</li>
-<li>28</li>
-<li>1600.00</li>
-</ul>
-<ul>
-<li>王五</li>
-<li>30</li>
-<li>3500.00</li>
-</ul>
-</body>
-</html>
+<?xml version="1.0" encoding="UTF-8"?><br><a href="#1">E-200402100001</a></br><br><a href="#2">E-200402100006</a></br><br><a href="#3">E-200503220001</a></br><ul id="#1"><li>张三</li><li>25</li><li>1200.00</li></ul><ul id="#2"><li>李四</li><li>28</li><li>1600.00</li></ul><ul id="#3"><li>王五</li><li>30</li><li>3500.00</li></ul>
