--- a/js/获取所有checkbox的value/test.html
+++ b/js/获取所有checkbox的value/test.html
@@ -14,11 +14,11 @@
     </head>
 
     <body>
-        <input type="checkbox" name="insterest" value="sport"/>
-        <input type="checkbox" name="insterest" value="music"/>
-        <input type="checkbox" name="insterest" value="food"/>
-        <input type="checkbox" name="insterest" value="sleep"/>
-        <input type="checkbox" name="insterest" value="dance"/>
+        运动<input type="checkbox" name="insterest" value="sport"/><br/>
+        音乐<input type="checkbox" name="insterest" value="music"/><br/>
+        美食<input type="checkbox" name="insterest" value="food"/><br/>
+        睡觉<input type="checkbox" name="insterest" value="sleep"/><br/>
+        跳舞<input type="checkbox" name="insterest" value="dance"/><br/>
         <input type="submit" onclick="getCheckboxValue();"/>
     </body>
 </html>
