--- a/js/表单验证/test2.html
+++ b/js/表单验证/test2.html
@@ -24,10 +24,10 @@
         <form id="userForm" name="userForm" method="GET" action="http://localhost:8080/oa/register.cgi"
             onsubmit="return checkAll();">
 
-            用户名
+            &emsp;用户名
             <input type="text" id="username" name="username" onblur="checkUsername(this.value);"
                                                              onfocus="clearErrMsg(this);" /><br />
-            密码
+            &emsp;&emsp;密码
             <input type="password" id="password" name="password" onblur="checkPassword(this.value);"
                                                                  onfocus="clearErrMsg(this);"/><br />
             确认密码
