--- a/js/表单验证/test2.html
+++ b/js/表单验证/test2.html
@@ -14,9 +14,46 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
         <style type="text/css">
+            .err_msg {
+                font-size: small;
+                    color: red;
+            }
+
+            .prompt_msg {
+                font-size: small;
+                    color: LightGrey;
+            }
         </style>
 
         <script type="text/javascript">
+            var ok = false; // flag:是否提交表单
+
+            String.prototype.trim = function () {
+                return this.replace(/^\s+/, "").replace(/\s+$/, "");
+            }
+
+            function checkUsername(username) {
+                if(username.trim() == "") {
+                    document.getElementById("usernamePromptMsg").innerHTML = "";
+                    document.getElementById("usernameErrMsg").innerHTML = "用户名不能为空";
+                    ok = false;
+                }
+            }
+
+            function clearErrMsg(obj) {
+                var promptMsgSpanElement = document.getElementById(obj.id + "PromptMsg");
+                var errMsgSpanElement = document.getElementById(obj.id + "ErrMsg");
+
+                // 先保存提示信息
+                if(promptMsgSpanElement.textContent != "") {
+                    var promptMsg = promptMsgSpanElement.textContent;
+                }
+
+                if(errMsgSpanElement.textContent != "") {
+                    promptMsgSpanElement.textContent = promptMsg;
+                    errMsgSpanElement.textContent = "";
+                }
+            }
         </script>
     </head>
 
@@ -26,13 +63,21 @@
 
             &emsp;用户名
             <input type="text" id="username" name="username" onblur="checkUsername(this.value);"
-                                                             onfocus="clearErrMsg(this);" /><br />
+                                                             onfocus="clearErrMsg(this);" />
+            <span id="usernamePromptMsg" class="prompt_msg">中文、英文、数字、符号或组合，长度[6-14]位</span>
+            <span id="usernameErrMsg" class="err_msg"></span><br />
+
             &emsp;&emsp;密码
             <input type="password" id="password" name="password" onblur="checkPassword(this.value);"
-                                                                 onfocus="clearErrMsg(this);"/><br />
+                                                                 onfocus="clearErrMsg(this);"/>
+            <span id="passwordPromptMsg" class="prompt_msg">字母、数字、符号或组合，长度至少6位</span>
+            <span id="passwordErrMsg" class="err_msg"></span><br />
+
             确认密码
             <input type="password" id="confirmPassword" name="confirmPassword" onblur="checkConfirmPassword();"
-                                                                               onfocus="clearErrMsg(this);" /><br />
+                                                                               onfocus="clearErrMsg(this);" />
+            <span id="confirmPasswordErrMsg" class="err_msg"><span><br />
+
             <input type="submit" />
 
         </form>
